# spotify_api

./: .editorconfig  .gitignore  .mise.toml  .pre-commit-config.yaml  .pubignore  .tool-versions  CHANGELOG.md  Makefile  README.md  analysis_options.yaml  build.yaml  dart_test.yaml  pubspec.yaml  pyproject.toml  renovate.json
.github/workflows/: workflow.yaml
example/: README.md  example_utils.dart  get_album_tracks.dart  get_kenning_west.dart  get_several_tracks.dart  get_single_track.dart  get_user_playlists.dart  retrieve_refresh_token.dart  search.dart
lib/: api.dart  extension.dart  spotify_api.dart
lib/src/: api.dart  exceptions.dart  model.dart  paging.dart  requests.dart
lib/src/api/: album.dart  api.dart  artist.dart  core.dart  genre.dart  paginator.dart  playlist.dart  track.dart  user.dart
lib/src/api_models/: image.dart  model.dart  page.dart  pagination.dart
lib/src/auth/: access_token_refresher.dart  authorization_code.dart  client_credentials.dart  common.dart  pkce.dart  scopes.dart  user_authorization.dart
lib/src/flows/: authentication_flow.dart  authorization_code.dart  client_credentials.dart  file_state_storage.dart  scopes.dart  token.dart
lib/src/playlists/: request.dart
test/: integration.dart  stub_test.dart
test/api/: album_test.dart  artist_test.dart  core_test.dart  genre_test.dart  leaky_playlist_test.dart  paginator_test.dart  playlist_test.dart  track_test.dart  user_test.dart
test/auth/: client_credentials_test.dart  pkce_test.dart
test/flows/: file_state_storage_test.dart
tool/: retrieve_refresh_token.dart
(+23 files in other folders)
