[tool.poetry]
name = "spotify-api-commitizen"
description = "Repository tooling for spotify_api"
version = "3.0.0"
authors = ["Björn Petersen <git@bjoernpetersen.net>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "~3.13"
commitizen = "3.31.0"
pre-commit = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
version_provider = "poetry"
version_scheme = "semver"
version_files = [
    "pubspec.yaml:version"
]
changelog_incremental = true
update_changelog_on_bump = true
